--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 API_KEY=blah_blah_blah
+# Полный или относительный путь до той папки куда нужно класть(ложить) аудио-файлы
+BASE_MEDIA_PATH=$HOME/Music
