--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pull-music-playlist",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --max-old-space-size=512 ./src/index.mjs"
